holiday form: switch religion to select, switch date to number, make list compact, fix new row select initialization; management toolbar: improve visibility

--- a/app/static/scss/main.scss
+++ b/app/static/scss/main.scss
@@ -48,12 +48,12 @@ body {background-color: #e8eaf6;}
   i.left {margin-right: 5px}
 }
 
-&.underline {background-color: transparent!important; color: #000; box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14);
+&.underline {background-color: transparent!important; color: #000; 
   &:hover {box-shadow: 0 2px 2px 0 rgba(0,0,0,0.3);}
 }
 
-&.light {opacity: 0.5;
-  &:hover {opacity: 0.6}
+&.light {opacity: 0.7;
+  &:hover {opacity: 0.8}
 }
 
 &.flat {box-shadow: none!important}
@@ -435,8 +435,12 @@ footer {font-size: 12px; padding: 10px 0; text-align: center; box-shadow: 0 -1px
   .pad-bot{
     padding-bottom: 20px;
   }
+
   #form-holidays {
     .gazetted_edit_btn {margin-top: 20px; cursor: pointer}
+    .row.holiday {margin: 0;
+      .input-field {margin: 0;}    
+    }
   }
   
 }
